--- a/conf/sample.syncflux.toml
+++ b/conf/sample.syncflux.toml
@@ -96,7 +96,7 @@
 # and also less resources on both master and slave databases
 # greater chunks of data will improve sync speed 
 
- data-chuck-duration = "60m"
+ data-chuck-duration = "5m"
 
 # 
 #  max-retention-interval
@@ -124,7 +124,12 @@
 
  num-workers = 4
 
-# ---- HTTP API SECTION (Only valid on hamonitor action)
+# syncflux splits  all chunk data  to write into multiple writes of max-points-in-single-write 
+# enables limitation on HTTP BODY REQUEST, avoiding errors like "Request Entity Too Large"
+
+ max-points-in-single-write = 20000
+
+ # ---- HTTP API SECTION (Only valid on hamonitor action)
 # Enables an HTTP API endpoint to check the cluster health
 
 [http]
